fix(footer): Add flex-wrap and center content in flex container

--- a/style/main.css
+++ b/style/main.css
@@ -328,6 +328,8 @@ footer{
     div{
         display: flex;
         align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
         gap: 20px;
         margin-bottom: 25px;
     }
